# ultra-trainer

./: .env.template  .gitignore  README.md  debug_strava_auth.py  get_strava_token.py  pyproject.toml  pytest.ini
tests/: test_strava_mcp_server.py
ultra_trainer/: agent.py  app.py  cli.py  context_store.py  prompts.py
ultra_trainer/strava_mcp_server/: __init__.py  server.py
