[project]
name = "ultra-trainer"
version = "0.1.0"
description = "Your personal Strava ultra marathon training app"
readme = "README.md"
requires-python = ">=3.11,<4.0"
license = {text = "MIT"}
authors = [{name = "Your Name", email = "you@example.com"}]
dependencies = ["fastmcp (>=2.11.0,<3.0.0)", "httpx (>=0.28.1,<0.29.0)", "python-dotenv (>=1.1.1,<2.0.0)"]
[project.scripts]
strava-mcp-server = "ultra_trainer.strava_mcp_server.server:main"


[tool.poetry]
package-mode = true
packages = [{include = "ultra_trainer"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
